out.txt
make holeycc
make[1]: Entering directory '/mnt/c/Users/drew/Dropbox/faculty/teaching/eecs665/holyc/p3/p3_files'
/usr/bin/clang++-9 -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Wuninitialized -Winit-self -Wmissing-declarations -Wmissing-include-dirs -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wsign-conversion -Wsign-promo -Wstrict-overflow=5 -Wundef -Werror -Wno-unused -Wno-unused-parameter -g -std=c++14 -MMD -MP -c -o main.o main.cpp
main.cpp:73:17: error: no matching constructor for initialization of 'holeyc::Parser'
        holeyc::Parser parser(scanner, root);
                       ^      ~~~~~~~~~~~~~
grammar.hh:410:5: note: candidate constructor not viable: no known conversion from 'holeyc::ProgramNode *' to 'holeyc::ProgramNode **' for 2nd argument; take the address of the argument with &
    Parser (holeyc::Scanner &scanner_yyarg, holeyc::ProgramNode** root_yyarg);
    ^
grammar.hh:446:5: note: candidate constructor not viable: requires 1 argument, but 2 were provided
    Parser (const Parser&);
    ^
main.cpp:170:18: error: no matching constructor for initialization of 'std::ostream' (aka 'basic_ostream<char>')
                                std::ostream out(unparseFile);
                                             ^   ~~~~~~~~~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/ostream:84:7: note: candidate constructor not viable: no known conversion from 'const char *' to 'std::basic_ostream<char, std::char_traits<char> >::__streambuf_type *' (aka 'basic_streambuf<char, std::char_traits<char> > *') for 1st argument
      basic_ostream(__streambuf_type* __sb)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/ostream:389:7: note: candidate constructor not viable: no known conversion from 'const char *' to 'basic_iostream<char, std::char_traits<char> > &' for 1st argument
      basic_ostream(basic_iostream<_CharT, _Traits>&) { }
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/ostream:391:7: note: candidate constructor not viable: no known conversion from 'const char *' to 'const std::basic_ostream<char>' for 1st argument
      basic_ostream(const basic_ostream&) = delete;
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/ostream:393:7: note: candidate constructor not viable: no known conversion from 'const char *' to 'std::basic_ostream<char>' for 1st argument
      basic_ostream(basic_ostream&& __rhs)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/ostream:384:7: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
      basic_ostream()
      ^
main.cpp:177:5: error: expected expression
                } catch (ToDoError * e){
                  ^
main.cpp:183:2: error: expected unqualified-id
        return 0;
        ^
main.cpp:184:1: error: extraneous closing brace ('}')
}
^
5 errors generated.
makefile:22: recipe for target 'main.o' failed
make[1]: *** [main.o] Error 1
make[1]: Leaving directory '/mnt/c/Users/drew/Dropbox/faculty/teaching/eecs665/holyc/p3/p3_files'
makefile:11: recipe for target 'all' failed
make: *** [all] Error 2
